@@ -5,6 +5,8 @@
 #
 # zip rdup -c's output
 
+set -o nounset
+
 S_ISDIR=16384   # octal: 040000 (This seems to be portable...)
 S_ISLNK=40960   # octal: 0120000
 S_MMASK=4095    # octal: 00007777, mask to get permission
