@@ -2,6 +2,8 @@
    -- bugfixes --
    * mirror.sh: use chown -h for symlinks
    * mirorr.sh: mirror_suffix() use +DD.HH:MM again (Graham King)
+   * all scripts: enabled set -o nounset, to catch unbound vars
+
 
 02 Mar 2006: 0.2.3 Miek <miek@miek.nl>
    -- features and bugfixes --
